tests/errors/std-mem-replace-own.ari
struct Holder {
  token: own i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var holder = Holder { token: make_owned(1) };
  let old = std::mem::replace<Holder>(ref mut holder, Holder { token: make_owned(2) });
  drop old;
  drop holder;
  return 0;
}
